# e-ink_weather_panel

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  .yamllint  CLAUDE.md  Dockerfile  README.md  a.ong  a.pn  compose.yaml  config-small.example.yaml  config-small.schema  config.example.yaml  config.example.yml  config.schema  debug_anomalies.py  debug_weather_panel.py  debug_zero_time.py  docker-compose.yml  fetch_cloud_image_01.htm  pyproject.toml  pytest.ini  rain_cloud_panel.prof  renovate.json  report.htm  requirements.txt  sensor_graph.prof
.github/workflows/: build.yaml  regression.yaml  test.yaml
app/: create_image.py  display_image.py  webapp.py
data/: metrics.db  window_size_cache.json
data/chrome/: DevToolsActivePort  Local State
data/chrome/rain_cloud.gw6/: DevToolsActivePort  Local State
data/chrome/rain_cloud.gw6/Default/: Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
data/chrome/rain_cloud.gw6/Default/DawnGraphiteCache/: data_1  index
data/chrome/rain_cloud.gw6/Default/DawnWebGPUCache/: index
data/chrome/rain_cloud.gw6/Default/Extension Rules/: LOG
data/chrome/rain_cloud.gw6/Default/Extension Scripts/: LOG
data/chrome/rain_cloud.gw6/Default/Extension State/: LOG  LOG.old
data/chrome/rain_cloud.gw6/Default/GPUCache/: index
data/chrome/rain_cloud.gw6/Default/Session Storage/: LOG  LOG.old
data/chrome/rain_cloud.gw6/Default/Sessions/: Session_13395683394157023  Session_13395683402944042  Tabs_13395683394265569  Tabs_13395683403140713
data/chrome/rain_cloud.gw6/Default/Site Characteristics Database/: LOG  LOG.old
data/chrome/rain_cloud.gw6/Default/WebStorage/: QuotaManager
data/chrome/rain_cloud.gw6/Default/shared_proto_db/: LOG  LOG.old
data/chrome/rain_cloud.gw6/GrShaderCache/: index
data/chrome/rain_cloud.gw6/GraphiteDawnCache/: index
data/chrome/rain_cloud.gw6/ShaderCache/: index
data/chrome/rain_cloud.gw6/segmentation_platform/: ukm_db
data/chrome/rain_cloud.gw7/: DevToolsActivePort  Local State
data/chrome/rain_cloud.gw7/Default/: BrowsingTopicsState  DIPS  History  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
data/chrome/rain_cloud.gw7/Default/DawnGraphiteCache/: index
data/chrome/rain_cloud.gw7/Default/DawnWebGPUCache/: index
data/chrome/rain_cloud.gw7/Default/Extension Rules/: LOG
data/chrome/rain_cloud.gw7/Default/Extension Scripts/: LOG
data/chrome/rain_cloud.gw7/Default/Extension State/: LOG
data/chrome/rain_cloud.gw7/Default/GPUCache/: index
data/chrome/rain_cloud.gw7/GrShaderCache/: index
data/chrome/rain_cloud.gw7/GraphiteDawnCache/: index
data/chrome/rain_cloud.gw7/ShaderCache/: index
data/chrome/rain_cloud.gw7/segmentation_platform/: ukm_db
data/chrome/rain_cloud_future.gw6/: DevToolsActivePort  Last Version  Local State
data/chrome/rain_cloud_future.gw6/Default/: Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
data/chrome/rain_cloud_future.gw6/GrShaderCache/: index
data/chrome/rain_cloud_future.gw6/GraphiteDawnCache/: index
data/chrome/rain_cloud_future.gw6/ShaderCache/: index
data/chrome/rain_cloud_future.gw6/segmentation_platform/: ukm_db
data/chrome/rain_cloud_future.gw7/: DevToolsActivePort  Local State
data/chrome/rain_cloud_future.gw7/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
data/chrome/rain_cloud_future.gw7/GrShaderCache/: index
data/chrome/rain_cloud_future.gw7/GraphiteDawnCache/: index
data/chrome/rain_cloud_future.gw7/ShaderCache/: index
data/chrome/rain_cloud_future.gw7/segmentation_platform/: ukm_db
data/deubg/: fetch_cloud_image_00.htm  fetch_cloud_image_01.htm
data/liveness/: display.gw2  display.gw5
img/: v767-wan-03 [更新済み].ai
img/org/: cloching_icon_list.psd
key/: panel.id_dsa  panel.id_dsa.pub  panel.id_rsa  panel.id_rsa.pub
kubernetes/: e-ink_weater_panel.yaml
lib/: config.py  flask_util.py  generator.py  logger.py  notify_slack.py  panel_util.py  pil_util.py  power_graph.py  rain_cloud_panel.py  selenium_util.py  sensor_data.py  sensor_graph.py  time_panel.py  wbgt_panel.py  weather_data.py  weather_panel.py  webapp_base.py  webapp_config.py
react/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react.old/: package-lock.json  package.json
react.old/public/: manifest.json
react.old/src/: App.js  index.css
react/public/: index.html  manifest.json
react/src/: App.js  App.tsx  index.css
script/: buildkitd.toml  docker_run.zsh  registry_push.zsh
src/: config.py  create_image.py  display_image.py  healthz.py  logger.py  notify_slack.py  panel_util.py  pil_util.py  power_graph.py  rain_cloud_image.py  rain_cloud_panel.py  selenium_util.py  sensor_data.py  sensor_graph.py  time_panel.py  update.py  weather_data.py  weather_panel.py  webapp.py  webdriver.py  webui.py
src/metrics/: __init__.py  collector.py  server.py
src/metrics/webapi/: __init__.py  page.py  page_js.py
src/unit_cooler/: __init__.py
src/unit_cooler/actuator/: __init__.py
src/unit_cooler/actuator/webapi/: __init__.py
src/unit_cooler/metrics/: __init__.py  collector.py
src/weather_display/: __init__.py  display.py  generator.py  metrics.py  metrics_server.py  power_graph.py  rain_cloud_panel.py  rain_fall_panel.py  sensor_graph.py  time_panel.py  timing_filter.py  wbgt_panel.py  weather_panel.py
src/weather_display/api/: run.py
src/weather_display/metrics/: __init__.py  collector.py  server.py
src/weather_display/metrics/webapi/: __init__.py  page.py  page_js.py
src/weather_display/panel/: __init__.py  rain_cloud.py  rain_fall.py  sensor_graph.py  wbgt.py
src/weather_display/runner/: __init__.py
src/weather_display/runner/webapi/: __init__.py  run.py
test/: conftest.py  test_basic.py
tests/: conftest.py  test_basic.py  test_playwright.py
(+923 files in other folders)
